fix format file more suitable

--- a/1712796-VoNhatThinh.ipynb
+++ b/1712796-VoNhatThinh.ipynb
@@ -4,7 +4,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Đồ án cuối kỳ"
+    "# Đồ án cuối kỳ\n",
+    "\n",
+    "Họ tên: Võ Nhật Thịnh\n",
+    "\n",
+    "MSSV: 1712796\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. nguồn dữ liệu\n",
+    "\n",
+    ">Khái quát về dữ liệu:\n",
+    "\n",
+    "Bộ dữ liệu cung cấp thông tin tình hình dịch COVID-19 đang diễn ra trên thế giới, mức độ lây lan của chúng, tổng số ca mắc, ca qua khỏi và ca tử vong theo thời gian thực, tức bộ dữ liệu luôn được cập nhật từng ngày từng giờ giúp ta có 1 cái nhìn trực quan nhất về dịch\n",
+    "\n",
+    "Nguồn dữ liệu: https://www.kaggle.com/sudalairajkumar/novel-corona-virus-2019-dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">license của chủ đề:\n",
+    "\n",
+    "Bộ dữ liệu có bản quyền thuộc về Creative Commons Attribution 4.0 International (CC BY 4.0) của trường Johns Hopkins University\n",
+    "để sử dụng bộ dữ liệu cho mục đích nghiên cứu, ta trích dẫn nguồn dữ liệu:\n",
+    "\n",
+    "\"Dong E, Du H, Gardner L. An interactive web-based dashboard to track COVID-19 in real time. Lancet Inf Dis. 20(5):533-534. doi: 10.1016/S1473-3099(20)30120-1\"\n",
+    "\n",
+    "chi tiết tham khảo: https://github.com/CSSEGISandData/COVID-19/blob/master/README.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> cách dữ liệu được thu thập:\n",
+    "\n",
+    "nguồn dữ liệu được thu thập từ 3 nguồn chính: \n",
+    "\n",
+    "    data tổng hợp từ các tổ chức lớn trên thế giới (WHO, ECDC, DXY,..)\n",
+    "    \n",
+    "    data từ các bang của US\n",
+    "    \n",
+    "    data từ các nước/ vùng khác ngoài US"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. khám phá dữ liệu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "from matplotlib import pyplot\n",
+    "from statsmodels.tsa.arima_model import ARIMA\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
