--- a/1712796-VoNhatThinh.ipynb
+++ b/1712796-VoNhatThinh.ipynb
@@ -1557,17 +1557,34 @@
     "&emsp;&emsp;+ **ObservationDate**: ngày phát hiện theo định dạng MM/DD/YYYY <br>\n",
     "&emsp;&emsp;+ **Province/State**: tỉnh/bang phát hiện ca mắc <br>\n",
     "&emsp;&emsp;+ **Country/Region**: quốc gia phát hiện ca mắc <br>\n",
-    "&emsp;&emsp;+ **Last Update**: thời gian ghi nhận ca mắc theo múi giờ UTC sở tại <br>\n",
+    "&emsp;&emsp;+ **Last Update**: thời gian ghi nhận ca mắc theo múi giờ UTC nước sở tại <br>\n",
     "&emsp;&emsp;+ **Confirmed**: lũy kế số ca mắc được xác nhận <br>\n",
     "&emsp;&emsp;+ **Deaths**: lũy kế số ca mắc không qua khỏi <br>\n",
-    "&emsp;&emsp;+ **Recovered**: lũy kế số ca mắc đã hồi phục <br>"
+    "&emsp;&emsp;+ **Recovered**: lũy kế số ca mắc đã hồi phục <br>\n",
+    "\n",
+    "### miền giá trị của các cột numerical/datetime\n",
+    "\n",
+    "   - các cột numerical: **SNo**, **Confirmed**, **Deaths**, **Recovered**\n",
+    "   - các cột datetime: **ObservationDate**, **Last Update**\n",
+    "   - các biến catergorical: **Province/State**, **Country/Region**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "mỗi dòng trong file có ý nghĩa: "
+    "### các giá trị có thể có đối với cột catergorical\n",
+    "\n",
+    "cột này chủ yếu gồm các tên nước, tỉnh, thành phố ở dạng string, tuy nhiên do dữ liệu được thu thập từ nhiều nguồn nên gặp vài vấn đề về đồng bộ tên riêng, tiêu biểu ở đây là tại cột **Country/Region** ta thay các dòng có giá trị \"Mainland China\" thành \"China\" để thuận tiện trả lời câu hỏi phía dưới"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covid_19_data['Country/Region'] = covid_19_data['Country/Region'].replace('Mainland China', 'China')"
    ]
   },
   {
@@ -1581,9 +1598,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Tình hình dịch tại Trung Quốc đang diễn biến như thế nào?\n",
-    "2. số ca nhiễm đang chữa trị tại thời điểm hiện tại\n",
-    "3. tiếp tục tình hình dịch như thế này dự đoán số người chết tại Việt Nam tăng lên bao nhiêu trong 1 tháng tới"
+    "## 1. Tình hình dịch tại Trung Quốc đang diễn biến như thế nào?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "phát biểu câu hỏi rõ ràng"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lợi ích trả lời câu hỏi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tiền xử lý dữ liệu có cần không"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trình tự phân tích"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. số ca nhiễm đang chữa trị tại thời điểm hiện tại"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "phát biểu câu hỏi rõ ràng"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lợi ích trả lời câu hỏi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tiền xử lý dữ liệu có cần không"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trình tự phân tích"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. tiếp tục tình hình dịch như thế này dự đoán số người chết tại Việt Nam tăng lên bao nhiêu trong 1 tháng tới"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "phát biểu câu hỏi rõ ràng"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lợi ích trả lời câu hỏi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tiền xử lý dữ liệu có cần không"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trình tự phân tích"
    ]
   },
   {
