final (add references)

--- a/1712796-VoNhatThinh.ipynb
+++ b/1712796-VoNhatThinh.ipynb
@@ -7967,6 +7967,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "--------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 4. Nhìn lại quá trình làm đồ án:\n",
     "\n",
     "Qua quá trình làm, ta thấy 1 số mặt thuận lợi và khó khăn:\n",
@@ -7992,7 +7999,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "nếu có thêm thời gian, ta sẽ đi sâu phân tích thêm các nước tiêu biểu về dịch trên thế giới như US, Italy, Spain,... để có cái nhìn toàn diện về tình hình dịch trên thế giới."
+    "### Những điều học được \n",
+    "\n",
+    "Sau khi hoàn thiện đồ án, em cảm thấy học được một số điều:\n",
+    "1. Kiến thức về các pandas, numpy, plotly, ARIMA,... library được cải thiện.\n",
+    "2. Khả năng xử lý dữ liệu để trực quan hóa, chọn plot để thể hiện tốt dữ liệu."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**nếu có thêm thời gian** ta sẽ đi sâu phân tích thêm các nước tiêu biểu về dịch trên thế giới như US, Italy, Spain,... để có cái nhìn toàn diện về tình hình dịch trên thế giới."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tài liệu tham khảo\n",
+    "Một số nguồn tài liệu tham khảo:\n",
+    "1. [Pandas](https://pandas.pydata.org/docs/)\n",
+    "2. [Numpy](https://numpy.org/devdocs/index.html)\n",
+    "3. [Matplotlib](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.html)\n",
+    "4. [Stack overflow](https://stackoverflow.com/)"
    ]
   },
   {
